--- a/activity1.html
+++ b/activity1.html
@@ -19,11 +19,11 @@
             <!--選單列-->
             <div class="nav">
                 <ul class="navbar">
-                    <li><a href="#">關於我們</a></li>
-                    <li><a href="#">學院介紹</a></li>
-                    <li><a href="#">任務看板</a></li>
-                    <li><a href="#">巫師商城</a></li>
-                    <li><a href="#">熱門活動</a></li>
+                    <li><a href="about.html">關於我們</a></li>
+                    <li><a href="department.html">學院介紹</a></li>
+                    <li><a href="guest.html">任務看板</a></li>
+                    <li><a href="shop.html">巫師商城</a></li>
+                    <li><a href="activity1.html">熱門活動</a></li>
                     <li><a href="#">登入</a></li>
                 </ul>           
             </div>
