--- a/activity2.html
+++ b/activity2.html
@@ -13,7 +13,7 @@
         <div class="container_top">  <!--1234567898-->
             <!--左上LOGO-->
             <div class="logo">
-                <a href="mainpage.html"><img src="img/about/logo.png" alt=""></a>
+                <a href="index.html"><img src="img/about/logo.png" alt=""></a>
             </div>
 
             <!--選單列-->
@@ -38,7 +38,7 @@
         <div class="main">
             <!-- 導覽列 -->
             <div class="main_top">
-                <a href="mainpage.html"><h5>首頁</h5></a>
+                <a href="index.html"><h5>首頁</h5></a>
                 <img src="img/about/arrow.png" alt="">
                 <a href="activity1.html"><h5>熱門活動</h5></a>
                 <img src="img/about/arrow.png" alt="">
