--- a/guest.html
+++ b/guest.html
@@ -13,7 +13,7 @@
         <div class="container_top">  <!--1234567898-->
             <!--左上LOGO-->
             <div class="logo">
-                <a href="mainpage.html"><img src="img/quest/logo.png" alt=""></a>
+                <a href="index.html"><img src="img/quest/logo.png" alt=""></a>
             </div>
 
             <!--選單列-->
@@ -38,7 +38,7 @@
             <div class="main_top">
                 <!--導覽列-->
                 <ul class="guide">
-                    <li> <a href="mainpage.html"><h5>首頁</h5></a></li>
+                    <li> <a href="index.html"><h5>首頁</h5></a></li>
                     <li><img src="img/quest/arrow.png" alt=""></li>
                     <li><a href="#"><h6>任務看板</h6></a></li>
                 </ul>
