--- a/department.html
+++ b/department.html
@@ -13,7 +13,7 @@
         <div class="container_top">  <!--1234567898-->
             <!--左上LOGO-->
             <div class="logo">
-                <a href="mainpage.html"><img src="img/quest/logo.png" alt=""></a>
+                <a href="index.html"><img src="img/quest/logo.png" alt=""></a>
             </div>
 
             <!--選單列-->
@@ -37,7 +37,7 @@
         <div class="main">
             <!-- 導覽列 -->
             <div class="main_top">
-                <a href="mainpage.html"><h5>首頁</h5></a>
+                <a href="index.html"><h5>首頁</h5></a>
                 <img src="img/about/arrow.png" alt="">
                 <a href="#"><h6>學院介紹</h6></a>
             </div>
