--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>首頁</title>
-    <link rel="stylesheet" href= "css/mainpage.css">
+    <link rel="stylesheet" href= "css/index.css">
 </head>
 <body>
     <div class="container">
@@ -14,7 +14,7 @@
             <div class="wrapper">
             <!-- 左上Logo -->       
                 <div class="logo">
-                    <a href="mainpage.html"><img src="img/about/logo.png" alt=""></a>
+                    <a href="index.html"><img src="img/about/logo.png" alt=""></a>
                 </div>
                 
             <!-- 選單列 -->
