學院翻牌效果

--- a/department.html
+++ b/department.html
@@ -43,7 +43,7 @@
             </div>
 
             <!-- 四大學院 -->
-            <div class="main_mid">
+            <!-- <div class="main_mid">
                 <h1>四大學院</h1>
                 <div class="main_mid_pic">
                     <img src="img/department/red.png" alt="">
@@ -51,7 +51,51 @@
                     <img src="img/department/blue.png" alt="">
                     <img src="img/department/yellow.png" alt="">
                 </div>
+            </div> -->
+            <div class="main_mid">
+                <h1>四大學院</h1>
+                <!-- 卡片大外框 -->
+                <div class="card_container">
+                    <!-- 紅色卡片1 -->
+                    <div class="red1">
+                        <div class="red1_front">
+                            <img src="img/department/red.png" alt="">
+                        </div>
+                        <div class="red1_back">
+                            <img src="img/department/redback.png" alt="">
+                        </div>
+                    </div>
+                    <!-- 綠色卡片2 -->
+                    <div class="green2">
+                        <div class="green2_front">
+                            <img src="img/department/green.png" alt="">
+                        </div>
+                        <div class="green2_back">
+                            <img src="img/department/greenback.png" alt="">
+                        </div>
+                    </div>
+                    <!-- 藍色卡片3 -->
+                    <div class="blue3">
+                        <div class="blue3_front">
+                            <img src="img/department/blue.png" alt="">
+                        </div>
+                        <div class="blue3_back">
+                            <img src="img/department/blueback.png" alt="">
+                        </div>
+                    </div>
+                    <!-- 黃色卡片4 -->
+                    <div class="yellow4">
+                        <div class="yellow4_front">
+                            <img src="img/department/yellow.png" alt="">
+                        </div>
+                        <div class="yellow4_back">
+                            <img src="img/department/yellowback.png" alt="">
+                        </div>
+                    </div>
+                </div>
             </div>
+
+            
         </div>
 
         <!--Footer-->
