--- a/guest.html
+++ b/guest.html
@@ -44,10 +44,10 @@
                 </ul>
                 <!--任務難度分級-->
                 <ul class="level">
-                    <li><a href="#">S級</a></li>
-                    <li><a href="#">A級</a></li>
-                    <li><a href="#">B級</a></li>
-                    <li><a href="#">C級</a></li>
+                    <li><button>S級</button></li>
+                    <li><button>A級</button></li>
+                    <li><button>B級</button></li>
+                    <li><button>C級</button></li>
                     <!--商城連結-->
                     <li class="shop">
                         <a href="shop.html"><img src="img/quest/ruby.png" alt=""><span>代幣兌換</span></a>
@@ -56,21 +56,27 @@
             </div>
             <!--任務看板-左半區-委託單-->
             <div class="main_left">
-                <img src="img/quest/1.png" alt="">
+                <img class="small_img_1"src="img/quest/1-1.png" alt="">
+                <img class="small_img_2"src="img/quest/2-1.png" alt="">
+                <img class="small_img_3"src="img/quest/3-1.png" alt="">
+                <img class="small_img_4"src="img/quest/4-1.png" alt="">
+                <img class="small_img_5"src="img/quest/5-1.png" alt="">
             </div>
             <!--任務看板-右半區-任務內容-->
-            <div class="main_right">
-                <img src="img/quest/cat.png" alt="">
-                <ul>
-                    <li><h2>獎勵 :</h2></li>
-                    <li><img class="coin"src="img/quest/coin.png" alt=""></li>
-                    <li><span>50</span></li>
-                </ul>
-                <h3>我的貓貓不見啦!!</h3>
-                <p>麻瓜家庭楊小姐的愛貓逃家了!<br>初步推斷是咬破紗窗離開原居所,<br>於榭寄生街區走失約三天,如圖<br>
-                <br><br>
-                ps.校長表示若能尋回他的同類,加碼50金</p>
-                <a href="#">接受任務</a>
+            <div class="main_right">               
+                <img class="big_img" src="img/quest/1-1.png" alt="">
+                <!-- 任務一內容 -->
+                <div>
+                    <ul>
+                        <li><h2>獎勵 :</h2></li>
+                        <li><img class="coin"src="img/quest/coin.png" alt=""></li>
+                        <li><span>50</span></li>
+                    </ul>
+                    <h3>我的貓貓不見啦!!</h3>
+                    <p>麻瓜家庭楊小姐的愛貓逃家了!初步推斷是咬破紗窗離開原居所,於榭寄生街區走失約三天,請參照貓咪圖協尋</p>
+                    <h4>PS. 校長表示若能尋回他的同類,加碼50金</h4>
+                    <a href="#">接受任務</a>
+                </div>
             </div>
         </div>
 
@@ -103,7 +109,7 @@
         
             </div>
         </div>
-
+        <script src="js/guest.js"></script>
     </div>
 </body>
 </html>
