--- a/shop.html
+++ b/shop.html
@@ -52,7 +52,7 @@
                         <li> <!-- set1 -->
                             <a href="#">
                                 <img src="img/shop/set1.png" alt="">
-                                <div class="product">
+                                <div class="product_note">
                                     <h3>巫師入門套組</h3>
                                     <span>100</span>
                                 </div>
@@ -61,7 +61,7 @@
                         <li> <!-- set2 -->
                             <a href="#">
                                 <img src="img/shop/set2.png" alt="">
-                                <div class="product">
+                                <div class="product_note">
                                     <h3>巫師進階套組</h3>
                                     <span>300</span>
                                 </div>
@@ -70,7 +70,7 @@
                         <li> <!-- set3 -->
                             <a href="#">
                                 <img src="img/shop/set3.png" alt="">
-                                <div class="product">
+                                <div class="product_note">
                                     <h3>魔晶石套組</h3>
                                     <span>999</span>
                                 </div>
@@ -86,7 +86,7 @@
                         <li> <!-- star1 -->
                             <a href="#">
                                 <img src="img/shop/star1.png" alt="">
-                                <div class="product">
+                                <div class="product_note">
                                     <h3>魔杖禮包(五入)</h3>
                                     <span>450</span>
                                 </div>
@@ -95,7 +95,7 @@
                         <li> <!-- star2 -->
                             <a href="#">
                                 <img src="img/shop/star2.png" alt="">
-                                <div class="product">
+                                <div class="product_note">
                                     <h3>貓毛木心杖</h3>
                                     <span>699</span>
                                 </div>
@@ -104,7 +104,7 @@
                         <li> <!-- star3 -->
                             <a href="#">
                                 <img src="img/shop/star3.png" alt="">
-                                <div class="product">
+                                <div class="product_note">
                                     <h3>貓鬍鬚木心杖</h3>
                                     <span>950</span>
                                 </div>
@@ -120,7 +120,7 @@
                         <li> <!-- poison1 -->
                             <a href="#">
                                 <img src="img/shop/poison1.png" alt="">
-                                <div class="product">
+                                <div class="product_note">
                                     <h3>喵語配方組</h3>
                                     <span>550</span>
                                 </div>
@@ -129,7 +129,7 @@
                         <li> <!-- poison2 -->
                             <a href="#">
                                 <img src="img/shop/poison2.png" alt="">
-                                <div class="product">
+                                <div class="product_note">
                                     <h3>憤怒貓咪的血淚</h3>
                                     <span>799</span>
                                 </div>
@@ -138,7 +138,7 @@
                         <li> <!-- poison3 -->
                             <a href="#">
                                 <img src="img/shop/poison3.png" alt="">
-                                <div class="product">
+                                <div class="product_note">
                                     <h3>動物幻化藥劑</h3>
                                     <span>1200</span>
                                 </div>
@@ -154,7 +154,7 @@
                         <li> <!-- ruby1 -->
                             <a href="#">
                                 <img src="img/shop/ruby1.png" alt="">
-                                <div class="product">
+                                <div class="product_note">
                                     <h3>獅鷲羽毛筆</h3>
                                     <span>399</span>
                                 </div>
@@ -163,7 +163,7 @@
                         <li> <!-- ruby2 -->
                             <a href="#">
                                 <img src="img/shop/ruby2.png" alt="">
-                                <div class="product">
+                                <div class="product_note">
                                     <h3>麻瓜氣息配飾</h3>
                                     <span>499</span>
                                 </div>
@@ -172,7 +172,7 @@
                         <li> <!-- ruby3 -->
                             <a href="#">
                                 <img src="img/shop/ruby3.png" alt="">
-                                <div class="product">
+                                <div class="product_note">
                                     <h3>巫師棋100周年限定款</h3>
                                     <span>2000</span>
                                 </div>
@@ -212,5 +212,6 @@
             </div>
         </div>
     </div>
+
 </body>
 </html>
