--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
             <div class="bottom_map">
                 <img class="map" src="img/about/map.png" alt="">
                 
-                <img class="pic1"src="img/about/1.png" alt="">
+                <button type="button"><img class="pic1"src="img/about/1.png" alt=""></button>
                 <img class="pic2"src="img/about/2.png" alt="">
                 <img class="pic3"src="img/about/3.png" alt="">
                 <img class="pic4"src="img/about/4.png" alt="">
