--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 </div>
             <!-- banner -->
                 <div class="banner">
+                    <img src="img/mainpage/banner_radius.png" alt="">
                 </div>
 
             <!-- 最新活動 -->
