--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>關於我們</title>
     <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="js/about.js">
+    <script src="https://unpkg.com/counterup2@2.0.2/dist/index.js">	</script>
 </head>
 <body>
     <!--Grid大爸爸-->
@@ -87,17 +89,17 @@
             <ul class="main_right">
                 <li>
                     <h1>就業率</h1>
-                    <h2>98%</h2>
+                    <h2 class="counter">98%</h2>
                     <h3>畢業即就業 ，統計至2021年</h3>
                 </li>
                 <li>
                     <h1>百大學校排名</h1>
-                    <h2>NO.2</h2>
+                    <h2 class="counter">NO.2</h2>
                     <h3>世界魔法學校排名蟬聯第二名</h3>
                 </li>
                 <li>
                     <h1>畢業巫師人數</h1>
-                    <h2>18962</h2>
+                    <h2 class="counter">18962</h2>
                     <h3>創校350年巫師校友遍及世界</h3>
                 </li>
             </ul>
@@ -151,5 +153,27 @@
         </div>
 
     </div>
+<!-- 校史導覽數據遞增 -->
+    <script>
+        const counterUp = window.counterUp.default
+
+        const callback = entries => {
+            entries.forEach( entry => {
+                const el = entry.target
+                if ( entry.isIntersecting && ! el.classList.contains( 'is-visible' ) ) {
+                    counterUp( el, {
+                        duration: 2000,
+                        delay: 16,
+                    } )
+                    el.classList.add( 'is-visible' )
+                }
+            } )
+        }
+
+        const IO = new IntersectionObserver( callback, { threshold: 1 } )
+
+        const el = document.querySelector( '.counter' )
+        IO.observe( el )
+    </script>
 </body>
 </html> 
