department gif text

--- a/department.html
+++ b/department.html
@@ -63,6 +63,11 @@
                         </div>
                         <div class="red1_back">
                             <img src="img/department/redback.png" alt="">
+                            <img class="gif1" src="img/department/goldlion2.gif" alt="">
+                            <div class="card_text">
+                                <h2>守護獸 : 雄獅</h2>
+                                <p>作為創校時的首座學院,巫術學院歷史悠長,且因咒術與巫術領域用途廣泛,學院人口在歷屆都是最高,,在此學院你可以學到戰鬥魔法,防禦魔法以及輔助系魔法,學院典藏的咒語書高達6000多本</p>
+                            </div>
                         </div>
                     </div>
                     <!-- 綠色卡片2 -->
@@ -72,6 +77,11 @@
                         </div>
                         <div class="green2_back">
                             <img src="img/department/greenback.png" alt="">
+                            <img class="gif1" src="img/department/goldfly.gif" alt="">
+                            <div class="card_text">
+                                <h2>守護獸 : 彩蝶</h2>
+                                <p>作為創校時的首座學院,巫術學院歷史悠長,且因咒術與巫術領域用途廣泛,學院人口在歷屆都是最高,,在此學院你可以學到戰鬥魔法,防禦魔法以及輔助系魔法,學院典藏的咒語書高達6000多本</p>
+                            </div>
                         </div>
                     </div>
                     <!-- 藍色卡片3 -->
@@ -81,6 +91,11 @@
                         </div>
                         <div class="blue3_back">
                             <img src="img/department/blueback.png" alt="">
+                            <img class="gif1" src="img/department/golddeer.gif" alt="">
+                            <div class="card_text">
+                                <h2>守護獸 : 靈鹿</h2>
+                                <p>作為創校時的首座學院,巫術學院歷史悠長,且因咒術與巫術領域用途廣泛,學院人口在歷屆都是最高,,在此學院你可以學到戰鬥魔法,防禦魔法以及輔助系魔法,學院典藏的咒語書高達6000多本</p>
+                            </div>
                         </div>
                     </div>
                     <!-- 黃色卡片4 -->
@@ -90,6 +105,11 @@
                         </div>
                         <div class="yellow4_back">
                             <img src="img/department/yellowback.png" alt="">
+                            <img class="gif1" src="img/department/goldbird.gif" alt="">
+                            <div class="card_text">
+                                <h2>守護獸 : 鳳凰</h2>
+                                <p>作為創校時的首座學院,巫術學院歷史悠長,且因咒術與巫術領域用途廣泛,學院人口在歷屆都是最高,,在此學院你可以學到戰鬥魔法,防禦魔法以及輔助系魔法,學院典藏的咒語書高達6000多本</p>
+                            </div>
                         </div>
                     </div>
                 </div>
