--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>首頁</title>
     <link rel="stylesheet" href= "css/index.css">
+    <script src="js/jquery-3.6.0.js"></script>
+    <script src="js/index.js"></script>
 </head>
 <body>
     <div class="container">
@@ -29,8 +31,20 @@
                     </ul>           
                 </div>
             <!-- banner -->
-                <div class="banner">
-                    <img src="img/mainpage/banner_radius.png" alt="">
+                <div id="sliderBoard">
+                    <ul id="banner_container">
+                        <li class="banner1">
+                            <img src="img/mainpage/banner_radius.png" alt="">
+                        </li>
+                        <li class="banner2">
+                            <img src="img/mainpage/banner_radius.png" alt="">
+                        </li>
+                        <li class="banner3">
+                            <img src="img/mainpage/banner_radius.png" alt="">
+                        </li>
+                    </ul>
+                        <!-- 圓圈圈  -->
+                       <ul id="banner_button"> </ul>
                 </div>
 
             <!-- 最新活動 -->
@@ -111,5 +125,6 @@
             </div>
         </div>
     </div>
+
 </body>
 </html>
