--- a/about.html
+++ b/about.html
@@ -21,13 +21,20 @@
             <!--選單列-->
             <div class="nav">
                 <ul class="navbar">
-                    <li><a href="about.html">關於我們</a></li>
-                    <li><a href="department.html">學院介紹</a></li>
-                    <li><a href="guest.html">任務看板</a></li>
-                    <li><a href="shop.html">巫師商城</a></li>
-                    <li><a href="activity1.html">熱門活動</a></li>
-                    <li><a href="#">登入</a></li>
-                </ul>         
+                    <li><a class="navbar_main" href="about.html">關於我們</a></li>
+                    <li><a class="navbar_main" href="department.html">學院介紹</a></li>
+                    <li><a class="navbar_main" href="guest.html">任務看板</a></li>
+                    <li><a class="navbar_main" href="shop.html">巫師商城</a></li>
+                    <li>
+                        <a class="navbar_main" href="activity1.html">熱門活動</a>
+                        <ul class="navbar_inner">
+                            <li>
+                                <a href="activity1.html">活動報名</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li><a class="navbar_main" href="activity2.html">會員登入</a></li>
+                </ul>           
             </div>
 
             <!--關於我們Banner-->
