--- a/activity1.html
+++ b/activity1.html
@@ -27,11 +27,11 @@
                         <a class="navbar_main" href="activity1.html">熱門活動</a>
                         <ul class="navbar_inner">
                             <li>
-                                <a href="activity1.html">活動報名</a>
+                                <a href="activity2.html">活動報名</a>
                             </li>
                         </ul>
                     </li>
-                    <li><a class="navbar_main" href="activity2.html">會員登入</a></li>
+                    <li><a class="navbar_main" href="#">會員登入</a></li>
                 </ul>           
             </div>
             <!--活動報名Banner-->
