--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>首頁</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href= "css/index.css">
+    
     <script src="js/jquery-3.6.0.js"></script>
     <script src="js/index.js"></script>
 </head>
@@ -72,22 +74,22 @@
             <ul class="news">
                 <li><h1>校園新聞</h1></li>
                 <li>
-                    <img src="img/mainpage/news_pic1.png" alt="">
-                    <h3>校友榮獲諾貝爾巫師獎</h3>
-                    <P>諾貝爾巫師獎從古至今僅有三人獲得,本校在此恭賀267屆畢業校友婕米妮在占星領域做出驚人的成就與發現並......</P>
-                    <a href="#">閱讀更多>></a>
+                    <img data-aos="fade-up" data-aos-duration="2000" src="img/mainpage/news_pic1.png" alt="">
+                    <h3 data-aos="fade-up" data-aos-duration="2000">校友榮獲諾貝爾巫師獎</h3>
+                    <p data-aos="fade-up" data-aos-duration="2000">諾貝爾巫師獎從古至今僅有三人獲得,本校在此恭賀267屆畢業校友婕米妮在占星領域做出驚人的成就與發現並......</p>
+                    <a data-aos="fade-up" data-aos-duration="2000" href="#">閱讀更多>></a>
                 </li>
                 <li>
-                    <img src="img/mainpage/news4.jpeg" alt="">
-                    <h3>喵喵變身大賽-頒獎典禮</h3>
-                    <P>本年度幻化變身主題是...貓貓!由於校長異常關注此賽事,導致今年賽況激烈,逾千人參賽下競爭膠著,最終由......</P>
-                    <a href="#">閱讀更多>></a>
+                    <img data-aos="fade-up" data-aos-duration="2000" src="img/mainpage/news4.jpeg" alt="">
+                    <h3 data-aos="fade-up" data-aos-duration="2000">喵喵變身大賽-頒獎典禮</h3>
+                    <P data-aos="fade-up" data-aos-duration="2000">本年度幻化變身主題是...貓貓!由於校長異常關注此賽事,導致今年賽況激烈,逾千人參賽下競爭膠著,最終由......</P>
+                    <a data-aos="fade-up" data-aos-duration="2000" href="#">閱讀更多>></a>
                 </li>
                 <li>
-                    <img src="img/mainpage/news_pic3.png" alt="">
-                    <h3>第497屆-鬥法大賽花絮</h3>
-                    <P>本校傳統賽事"鬥法大賽”已經於上周末結束,今年讓人跌破眼鏡的是長年奪冠的巫術學院落榜,竟由黑馬......</P>
-                    <a href="#">閱讀更多>></a>
+                    <img data-aos="fade-up" data-aos-duration="2000" src="img/mainpage/news_pic3.png" alt="">
+                    <h3 data-aos="fade-up" data-aos-duration="2000">第497屆-鬥法大賽花絮</h3>
+                    <P data-aos="fade-up" data-aos-duration="2000">本校傳統賽事"鬥法大賽”已經於上周末結束,今年讓人跌破眼鏡的是長年奪冠的巫術學院落榜,竟由黑馬......</P>
+                    <a data-aos="fade-up" data-aos-duration="2000" href="#">閱讀更多>></a>
                 </li>
             </ul>
         </main>
@@ -132,6 +134,10 @@
             </div>
         </div>
     </div>
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+    
 </body>
 </html>
