aosfinal(no index)

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
                 <a href="#"><h6>關於我們</h6></a>
             </div>
             <!-- 校長介紹 -->
-            <div data-aos="fade-up" data-aos-duration="2000" class="header_main">
+            <div data-aos="fade-up" data-aos-duration="1500" data-aos-offset="150" class="header_main">
                 <img class="mainpic"src="img/about/catboss.png" alt="">
                 <div>
                     <h1>校長 - 柯比・肆玖柒</h1>
@@ -79,7 +79,7 @@
         <!--校園新聞-->
         <div class="main">
             <!-- 校園新聞:校史導覽 -->
-            <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-delay="500" class="main_left">
+            <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-delay="250" data-aos-duration="800" class="main_left">
                 <h1>校史導覽</h1>
                 <p>藍貓巫師學院創立350年，作為正派的魔法學校代表，開校以來便傳下此語錄：＂邪惡就是邪惡，沒有大小中之分。罪惡的界限因人而異，變幻莫測。如果要我從兩種罪惡中選其一，我寧可不做選擇。</p>
                 <img src="img/about/train.png" alt="">
@@ -88,12 +88,12 @@
 
             <!-- 校園新聞:傑出校友 -->
             <ul class="main_mid">
-                <li data-aos="fade-up-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+                <li data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="800">
                     <img src="img/about/witches.png" alt="">
                     <h2>傑出校友-阿比西尼亞姊妹</h2>
                     <p>阿比西尼雅女巫姊妹一生鑽研魔法掃走的研發與使用，旗下擁有世界最知名的掃走品牌＂待宰的羔羊也會飛＂，而他們更是世界盃飛行賽的創始人，但是校長柯比卻跟他們訂製了用掃走毛做成的毛線球...</p>
                 </li>
-                <li data-aos="fade-up-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
+                <li data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="800">
                     <img src="img/about/wizard.png" alt="">
                     <h2>傑出校友-暹羅・波斯</h2>
                     <p>＂Thousands Master＂，此名號在魔法界赫赫有名，精通咒術且自創了近千種咒文因而得名，現就職於國家咒術研發局，持續為魔法界做出貢獻，相傳是當今少數於對決時能讓校長柯比認真到喵喵叫的對手，實力可見一斑。</p>
@@ -101,7 +101,7 @@
             </ul>
 
             <!-- 校園新聞:右側數據列 -->
-            <ul data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-delay="500"class="main_right">
+            <ul data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-delay="250"class="main_right" data-aos-duration="800">
                 <li>
                     <h1>就業率</h1>
                     <h2 class="counter">98%</h2>
