--- a/shop.html
+++ b/shop.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>巫師商城</title>
+    <!-- css -->
     <link rel="stylesheet" href="css/shop.css">
+    <!-- aos -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 <body>
     <!--Grid大爸爸-->
@@ -56,7 +60,7 @@
                     <a class="shopmore" href="#"><h4>探索更多>></h4></a>
                     <div class="underline"></div>
                     <ul>
-                        <li> <!-- set1 -->
+                        <li data-aos="zoom-in" data-aos-duration="1000"> <!-- set1 -->
                             <a href="#">
                                 <img src="img/shop/set1.png" alt="">
                                 <div class="product_note">
@@ -65,7 +69,7 @@
                                 </div>
                             </a>
                         </li>
-                        <li> <!-- set2 -->
+                        <li data-aos="zoom-in" data-aos-duration="1000"> <!-- set2 -->
                             <a href="#">
                                 <img src="img/shop/set2.png" alt="">
                                 <div class="product_note">
@@ -74,7 +78,7 @@
                                 </div>
                             </a>
                         </li>
-                        <li> <!-- set3 -->
+                        <li data-aos="zoom-in" data-aos-duration="1000"> <!-- set3 -->
                             <a href="#">
                                 <img src="img/shop/set3.png" alt="">
                                 <div class="product_note">
@@ -90,7 +94,7 @@
                     <a class="shopmore" href="#"><h4>探索更多>></h4></a>
                     <div class="underline"></div>
                     <ul>
-                        <li> <!-- star1 -->
+                        <li data-aos="zoom-in" data-aos-duration="1000"> <!-- star1 -->
                             <a href="#">
                                 <img src="img/shop/star1.png" alt="">
                                 <div class="product_note">
@@ -99,7 +103,7 @@
                                 </div>
                             </a>
                         </li>
-                        <li> <!-- star2 -->
+                        <li data-aos="zoom-in" data-aos-duration="1000"> <!-- star2 -->
                             <a href="#">
                                 <img src="img/shop/star2.png" alt="">
                                 <div class="product_note">
@@ -108,7 +112,7 @@
                                 </div>
                             </a>
                         </li>
-                        <li> <!-- star3 -->
+                        <li data-aos="zoom-in" data-aos-duration="1000"> <!-- star3 -->
                             <a href="#">
                                 <img src="img/shop/star3.png" alt="">
                                 <div class="product_note">
@@ -124,7 +128,7 @@
                     <a class="shopmore" href="#"><h4>探索更多>></h4></a>
                     <div class="underline"></div>
                     <ul>
-                        <li> <!-- poison1 -->
+                        <li data-aos="zoom-in" data-aos-duration="1000"> <!-- poison1 -->
                             <a href="#">
                                 <img src="img/shop/poison1.png" alt="">
                                 <div class="product_note">
@@ -133,7 +137,7 @@
                                 </div>
                             </a>
                         </li>
-                        <li> <!-- poison2 -->
+                        <li data-aos="zoom-in" data-aos-duration="1000"> <!-- poison2 -->
                             <a href="#">
                                 <img src="img/shop/poison2.png" alt="">
                                 <div class="product_note">
@@ -142,7 +146,7 @@
                                 </div>
                             </a>
                         </li>
-                        <li> <!-- poison3 -->
+                        <li data-aos="zoom-in" data-aos-duration="1000"> <!-- poison3 -->
                             <a href="#">
                                 <img src="img/shop/poison3.png" alt="">
                                 <div class="product_note">
@@ -158,7 +162,7 @@
                     <a class="shopmore" href="#"><h4>探索更多>></h4></a>
                     <div class="underline"></div>
                     <ul>
-                        <li> <!-- ruby1 -->
+                        <li data-aos="zoom-in" data-aos-duration="1000"> <!-- ruby1 -->
                             <a href="#">
                                 <img src="img/shop/ruby1.png" alt="">
                                 <div class="product_note">
@@ -167,7 +171,7 @@
                                 </div>
                             </a>
                         </li>
-                        <li> <!-- ruby2 -->
+                        <li data-aos="zoom-in" data-aos-duration="1000"> <!-- ruby2 -->
                             <a href="#">
                                 <img src="img/shop/ruby2.png" alt="">
                                 <div class="product_note">
@@ -176,7 +180,7 @@
                                 </div>
                             </a>
                         </li>
-                        <li> <!-- ruby3 -->
+                        <li data-aos="zoom-in" data-aos-duration="1000"> <!-- ruby3 -->
                             <a href="#">
                                 <img src="img/shop/ruby3.png" alt="">
                                 <div class="product_note">
@@ -219,6 +223,8 @@
             </div>
         </div>
     </div>
-
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
