--- a/activity1.html
+++ b/activity1.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>活動報名1</title>
+    <!-- css -->
     <link rel="stylesheet" href="css/activity1.css">
+    <!-- aos -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 <body>
     <!--Grid大爸爸-->
@@ -107,25 +111,25 @@
         <div class="bottom">
             <h1>活動一覽</h1>
             <ul>
-                <li>
+                <li data-aos="flip-left" data-aos-duration="1000">
                     <img src="img/activity/class1.png" alt="">
                     <h3>小小巫師體驗營</h3>
                     <p>經典課程再度開啟,歡迎帶您們的小朋友來體驗巫師的日常,課程中會教學簡易的魔法並配送初階巫師的裝備套組,在這魔法取代科技的年代,世界的運行早已脫離不了......</p>
                     <a href="activity2.html">探索更多>></a>
                 </li>
-                <li>
+                <li data-aos="flip-right" data-aos-duration="1000">
                     <img src="img/activity/class2.png" alt="">
                     <h3>卡拉姆久 簽書會</h3>
                     <p>魔法界叱吒風雲多年的卡拉姆久女士將親臨本校,在此簽書會中將談論關於她的人生以及新的巨作”將貓鬍鬚作為藥材的1000種用法”是如何誕生,雖然校長對此似乎不太高興,但仍然.......</p>
                     <a href="activity2.html">探索更多>></a>
                 </li>
-                <li>
+                <li data-aos="flip-left" data-aos-duration="1000">
                     <img src="img/activity/class3.png" alt="">
                     <h3>漂浮術學程</h3>
                     <p>在本校既定學程內並沒有的漂浮術開課啦!因此魔法對於魔力的操作有一定的要求,且具一定程度的危險性,因此僅限具備中級(或以上)巫師檢定資格者報名,漂浮術作為古魔法經常用在......</p>
                     <a href="activity2.html">探索更多>></a>
                 </li>
-                <li>
+                <li data-aos="flip-right" data-aos-duration="1000">
                     <img src="img/activity/class4.png" alt="">
                     <h3>占星術學程</h3>
                     <p>魔法界最神秘的學問之一"占星術”,除了能夠未卜先知外,技高者甚至能使用星體魔法達成一般巫師做不到的事情,此學程將引領你了解此古老的魔法並修正自己宮位的......</p>
@@ -162,5 +166,8 @@
             </div>
         </div>
     </div>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
