--- a/about.html
+++ b/about.html
@@ -248,6 +248,12 @@
         </div>
 
     </div>
+
+<!-- scrollTOP -->
+    <a href="#" class="toTop">
+        <img class="toTop_pic" src="img/about/totop.png" alt="Top">
+    </a>
+
 <!-- 校史導覽數據遞增 -->
     <script>
        
