--- a/guest.html
+++ b/guest.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>任務看板</title>
+    <!-- css -->
     <link rel="stylesheet" href="css/guest.css">
+    <!-- js -->
+    <link rel="stylesheet" href="js/guest.js">
 </head>
 <body>
     <!--Grid大爸爸-->
@@ -122,7 +125,7 @@
             <img class="toTop_pic" src="img/quest/totop.png" alt="Top">
         </a>
 
-        <script src="js/guest.js"></script>
+        
     </div>
 </body>
 </html>
