--- a/index.html
+++ b/index.html
@@ -139,7 +139,9 @@
     </div>
     
     <script>
-        AOS.init();
+        $(window).scroll(function(){
+            AOS.init();
+        }
     </script>
     
 </body>
