--- a/shop.html
+++ b/shop.html
@@ -7,6 +7,8 @@
     <title>巫師商城</title>
     <!-- css -->
     <link rel="stylesheet" href="css/shop.css">
+    <!-- js -->
+    <link rel="stylesheet" href="js/shop.js">
     <!-- aos -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -223,6 +225,12 @@
             </div>
         </div>
     </div>
+
+    <!-- scrollTOP -->
+    <a href="#" class="toTop">
+        <img class="toTop_pic" src="img/quest/totop.png" alt="Top">
+    </a>
+    
     <script>
         AOS.init();
     </script>
