--- a/guest.html
+++ b/guest.html
@@ -8,7 +8,7 @@
     <!-- css -->
     <link rel="stylesheet" href="css/guest.css">
     <!-- js -->
-    <link rel="stylesheet" href="js/guest.js">
+    <!-- <link rel="stylesheet" href="js/guest.js"> -->
 </head>
 <body>
     <!--Grid大爸爸-->
@@ -124,8 +124,8 @@
         <a href="#" class="toTop">
             <img class="toTop_pic" src="img/quest/totop.png" alt="Top">
         </a>
-
-        
     </div>
+
+    <script src="./js/guest.js"></script>
 </body>
 </html>
