--- a/guest.html
+++ b/guest.html
@@ -7,7 +7,8 @@
     <title>任務看板</title>
     <!-- css -->
     <link rel="stylesheet" href="css/guest.css">
-    <!-- js -->
+    <!-- jQuery -->
+    <script src="js/jquery-3.6.0.js"></script>
     <!-- <link rel="stylesheet" href="js/guest.js"> -->
 </head>
 <body>
