--- a/activity2.html
+++ b/activity2.html
@@ -7,6 +7,8 @@
     <title>購買活動</title>
     <!-- css -->
     <link rel="stylesheet" href="css/activity2.css">
+     <!-- jQuery -->
+     <script src="js/jquery-3.6.0.js"></script>
      <!-- aos -->
      <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -134,8 +136,19 @@
             </div>
         </div>   
     </div>
+
+<!-- scrollTOP -->
+      <a href="#" class="toTop">
+        <img class="toTop_pic" src="img/quest/totop.png" alt="Top">
+    </a>
+
+<!-- 套件aos -->
     <script>
         AOS.init();
     </script>
+
+<!-- js -->
+    <script src="js/activity2.js"></script>
+
 </body>
 </html>
