--- a/department.html
+++ b/department.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>學院介紹</title>
     <link rel="stylesheet" href="css/department.css">
+    <!-- jQuery -->
+    <script src="js/jquery-3.6.0.js"></script>
 </head>
 <body>
     <!--Grid大爸爸-->
@@ -150,10 +152,16 @@
             <div class="footer_bottom">
                 <h3>Copyright©BlueCat School Of Magic</h3>
                 <p>本網站為緯育TibaMe前端工程師專業技術養成班WGD101學員專題作品，本平台僅供學習、展示之用。若有侵權疑慮，您可以私訊 [緯育TibaMe] ，後續會由專人協助處理。</p>
-        
             </div>
         </div>
-
     </div>
+
+    <!-- scrollTOP -->
+    <a href="#" class="toTop">
+        <img class="toTop_pic" src="img/quest/totop.png" alt="Top">
+    </a>
+
+    <!-- js -->
+    <script src="js/department.js"></script>
 </body>
 </html>
