--- a/shop.html
+++ b/shop.html
@@ -7,8 +7,8 @@
     <title>巫師商城</title>
     <!-- css -->
     <link rel="stylesheet" href="css/shop.css">
-    <!-- js -->
-    <link rel="stylesheet" href="js/shop.js">
+    <!-- jQuery -->
+    <script src="js/jquery-3.6.0.js"></script>
     <!-- aos -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -231,8 +231,12 @@
         <img class="toTop_pic" src="img/quest/totop.png" alt="Top">
     </a>
     
+    <!-- 套件aos -->
     <script>
         AOS.init();
     </script>
+
+    <!-- js -->
+    <script src="js/shop.js"></script>
 </body>
 </html>
