--- a/guest.html
+++ b/guest.html
@@ -60,8 +60,31 @@
                     <li><button>B級</button></li>
                     <li><button>C級</button></li>
                     <!--商城連結-->
-                    <li class="shop">
-                        <a href="shop.html"><img src="img/quest/ruby.png" alt=""><span>代幣兌換</span></a>
+                    <li class="shop">   <!--硬幣開始-->
+                        <a class="goshop" href="shop.html">代幣兌換</a>
+                        <div class="y-axis-container">  
+                            <div class="ccontainer">       
+                              <div class="flash"></div>
+                              <div class="coin side">
+                                <div class="shine" style="transform:rotate(-30deg);"></div>
+                              </div>
+                              <div class="side-coin"></div>
+                              <div class="coin">
+                                <div class="dai">
+                                  <div class="inner-dai">
+                                    <div class="inner-inner-dai">
+                        
+                                    </div>
+                                  </div>
+                                  <div class="cutout"></div>
+                                  <div class="dai-shadow"></div>
+                                </div>
+                                <div class="shine"></div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="shadow"></div>    <!--硬幣結束-->
+
                     </li>
                 </ul>    
             </div>
@@ -80,7 +103,7 @@
                 <div>
                     <ul>
                         <li><h2>獎勵 :</h2></li>
-                        <li><img class="coin"src="img/quest/coin.png" alt=""></li>
+                        <li><img class="money"src="img/quest/coin.png" alt=""></li>
                         <li><span>50</span></li>
                     </ul>
                     <h3>我的貓貓不見啦!!</h3>
