--- a/department.html
+++ b/department.html
@@ -71,7 +71,7 @@
                             <img src="img/department/red.png" alt="">
                         </div>
                         <div class="red1_back">
-                            <img src="img/department/redback.png" alt="">
+                            <img src="img/department/redback1.png" alt="">
                             <img class="gif1" src="img/department/goldlion2.gif" alt="">
                             <div class="card_text">
                                 <h2>守護獸 : 雄獅</h2>
@@ -85,7 +85,7 @@
                             <img src="img/department/green.png" alt="">
                         </div>
                         <div class="green2_back">
-                            <img src="img/department/greenback.png" alt="">
+                            <img src="img/department/greenback1.png" alt="">
                             <img class="gif1" src="img/department/goldfly.gif" alt="">
                             <div class="card_text">
                                 <h2>守護獸 : 彩蝶</h2>
@@ -99,7 +99,7 @@
                             <img src="img/department/blue.png" alt="">
                         </div>
                         <div class="blue3_back">
-                            <img src="img/department/blueback.png" alt="">
+                            <img src="img/department/blueback1.png" alt="">
                             <img class="gif1" src="img/department/golddeer.gif" alt="">
                             <div class="card_text">
                                 <h2>守護獸 : 靈鹿</h2>
@@ -113,7 +113,7 @@
                             <img src="img/department/yellow.png" alt="">
                         </div>
                         <div class="yellow4_back">
-                            <img src="img/department/yellowback.png" alt="">
+                            <img src="img/department/yellowback1.png" alt="">
                             <img class="gif1" src="img/department/goldbird.gif" alt="">
                             <div class="card_text">
                                 <h2>守護獸 : 鳳凰</h2>
