--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
         <main class="main_2">
             <h1>校園生活</h1>
             <div class="life">
-                <img class="life1" src="img/mainpage/life1.png" alt="">
-                <img class="life2" src="img/mainpage/life2.png" alt="">
-                <img class="life3" src="img/mainpage/life3.png" alt="">
-                <img class="life4" src="img/mainpage/life4.png" alt="">
+                <img data-aos="fade-up" data-aos-duration="2000" data-aos-offset="200" class="life1" src="img/mainpage/life1.png" alt="">
+                <img data-aos="fade-up" data-aos-duration="3000" data-aos-offset="300"class="life2" src="img/mainpage/life2.png" alt="">
+                <img data-aos="fade-up" data-aos-duration="2500" data-aos-offset="200"class="life3" src="img/mainpage/life3.png" alt="">
+                <img data-aos="fade-up" data-aos-duration="3000" class="life4" src="img/mainpage/life4.png" alt="">
             </div>
         </main>
 
