--- a/index.html
+++ b/index.html
@@ -79,19 +79,19 @@
                     <img data-aos="fade-up" data-aos-duration="2000" src="img/mainpage/news_pic1.png" alt="">
                     <h3 data-aos="fade-up" data-aos-duration="2000">校友榮獲諾貝爾巫師獎</h3>
                     <p data-aos="fade-up" data-aos-duration="2000">諾貝爾巫師獎從古至今僅有三人獲得,本校在此恭賀267屆畢業校友婕米妮在占星領域做出驚人的成就與發現並......</p>
-                    <a data-aos="fade-up" data-aos-duration="2000" href="#">閱讀更多>></a>
+                    <a data-aos="fade-up" data-aos-duration="2000" href="#">探索更多>></a>
                 </li>
                 <li>
                     <img data-aos="fade-up" data-aos-duration="2000" src="img/mainpage/news4.jpeg" alt="">
                     <h3 data-aos="fade-up" data-aos-duration="2000">喵喵變身大賽-頒獎典禮</h3>
                     <P data-aos="fade-up" data-aos-duration="2000">本年度幻化變身主題是...貓貓!由於校長異常關注此賽事,導致今年賽況激烈,逾千人參賽下競爭膠著,最終由......</P>
-                    <a data-aos="fade-up" data-aos-duration="2000" href="#">閱讀更多>></a>
+                    <a data-aos="fade-up" data-aos-duration="2000" href="#">探索更多>></a>
                 </li>
                 <li>
                     <img data-aos="fade-up" data-aos-duration="2000" src="img/mainpage/news_pic3.png" alt="">
                     <h3 data-aos="fade-up" data-aos-duration="2000">第497屆-鬥法大賽花絮</h3>
                     <P data-aos="fade-up" data-aos-duration="2000">本校傳統賽事"鬥法大賽”已經於上周末結束,今年讓人跌破眼鏡的是長年奪冠的巫術學院落榜,竟由黑馬......</P>
-                    <a data-aos="fade-up" data-aos-duration="2000" href="#">閱讀更多>></a>
+                    <a data-aos="fade-up" data-aos-duration="2000" href="#">探索更多>></a>
                 </li>
             </ul>
         </main>
@@ -101,9 +101,9 @@
             <h1>校園生活</h1>
             <div class="life">
                 <img data-aos="fade-up" data-aos-duration="2000" data-aos-offset="200" class="life1" src="img/mainpage/life1.png" alt="">
-                <img data-aos="fade-up" data-aos-duration="3000" data-aos-offset="300" class="life2" src="img/mainpage/life2.png" alt="">
+                <img data-aos="fade-up" data-aos-duration="3000" data-aos-offset="150" class="life2" src="img/mainpage/life2.png" alt="">
                 <img data-aos="fade-up" data-aos-duration="2500" data-aos-offset="200" class="life3" src="img/mainpage/life3.png" alt="">
-                <img data-aos="fade-up" data-aos-duration="3000" data-aos-offset="100" class="life4" src="img/mainpage/life4.png" alt="">
+                <img data-aos="fade-up" data-aos-duration="2000" data-aos-offset="200" class="life4" src="img/mainpage/life4.png" alt="">
             </div>
         </main>
 
