--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
                 <h1>校史導覽</h1>
                 <p>藍貓巫師學院創立350年，作為正派的魔法學校代表，開校以來便傳下此語錄：＂邪惡就是邪惡，沒有大小中之分。罪惡的界限因人而異，變幻莫測。如果要我從兩種罪惡中選其一，我寧可不做選擇。</p>
                 <img src="img/about/train.png" alt="">
-                <a href="#">閱讀更多>></a>
+                <a href="#">探索更多>></a>
             </div>
 
             <!-- 校園新聞:傑出校友 -->
